--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -11,14 +10,12 @@ body {
   color: #333;
 }
 
-
 .home-container {
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
   padding: 20px;
   background-color: #fff;
 }
-
 
 .banner {
   display: flex;
@@ -50,7 +47,6 @@ body {
   margin-top: 20px;
 }
 
-
 .categories {
   display: flex;
   justify-content: space-between;
@@ -76,34 +72,46 @@ body {
 .product {
   display: flex;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   background-color: #f5f5f5;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
+  
 }
 
 .product img {
   max-width: 100%;
-  height: auto;
+  height:auto;
   border-radius: 10px;
   object-fit: cover;
+  
 }
 
 .product-info {
   flex: 1;
   text-align: center;
+  width: 10%;
+  height: 10px;
+  border-radius: 50%;
+  margin-top: 20px;margin-bottom: 90px;
+  margin-left: 700px;
+  color:black;
 }
 
 .price {
-  background: #00bfff;
+  background:black;
   color: white;
   padding: 20px;
+  margin-left: 500px;
+  margin-right: 10px;
+  margin-top: px;
   border-radius: 50%;
   font-size: 18px;
+  
 }
 
 .view-button {
-  background: #00bfff;
+  background:black;
   color: white;
   padding: 10px;
   border: none;
@@ -206,18 +214,13 @@ body {
   }
 }
 
-
-
-
-
-
 .auth-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #f0f0f0;
-  padding: 0 20px; 
+  padding: 0 20px;
   box-sizing: border-box;
   overflow: hidden;
 }
@@ -231,9 +234,8 @@ body {
   max-width: 1000px;
   width: 100%;
   transition: all 0.3s ease;
-  flex-wrap: nowrap; 
+  flex-wrap: nowrap;
 }
-
 
 .auth-left {
   width: 50%;
@@ -246,7 +248,6 @@ body {
   box-sizing: border-box;
 }
 
-
 .auth-left h1 {
   margin-bottom: 30px;
   font-size: 2rem;
@@ -254,13 +255,11 @@ body {
   color: #333;
 }
 
-
 .auth-left form {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-
 
 .auth-left input {
   padding: 12px;
@@ -285,13 +284,11 @@ body {
   background-color: #0056b3;
 }
 
-
 .auth-left .error-message {
   color: red;
   margin-top: 10px;
   font-size: 0.9rem;
 }
-
 
 .auth-left button:nth-of-type(2) {
   margin-top: 20px;
@@ -311,7 +308,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5; 
+  background-color: #f5f5f5;
   box-sizing: border-box;
 }
 
@@ -321,16 +318,15 @@ body {
   border-radius: 8px;
 }
 
-
 @media (max-width: 1024px) {
   .auth-container {
-    flex-direction: row; 
+    flex-direction: row;
     width: 100%;
     max-width: 100%;
   }
 
   .auth-left {
-    width: 50%; 
+    width: 50%;
     padding: 30px;
   }
 
@@ -352,7 +348,6 @@ body {
 }
 
 @media (max-width: 768px) {
-  
   .auth-wrapper {
     padding: 0 10px;
   }
@@ -362,7 +357,7 @@ body {
   }
 
   .auth-left {
-    width: 50%; 
+    width: 50%;
     padding: 20px;
   }
 
@@ -387,7 +382,7 @@ body {
   }
 
   .auth-right {
-    width: 50%; 
+    width: 50%;
     padding: 10px;
   }
 
@@ -397,17 +392,16 @@ body {
 }
 
 @media (max-width: 480px) {
- 
   .auth-wrapper {
     padding: 0 5px;
   }
 
   .auth-container {
-    flex-direction: row; 
+    flex-direction: row;
   }
 
   .auth-left {
-    width: 50%; 
+    width: 50%;
     padding: 15px;
   }
 
@@ -432,100 +426,13 @@ body {
   }
 
   .auth-right {
-    width: 50%; 
+    width: 50%;
     padding: 10px;
   }
 
   .auth-right img {
-    max-width: 90%;
-  }
-}
-
-
-
-
-
-
-
-
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  background-color: #333;
-  color: white;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-
-.navbar .logo {
-  font-size: 1.8rem;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.navbar .nav-links {
-  display: flex;
-  align-items: center;
-}
-
-.navbar .nav-links a,
-.navbar .nav-links button {
-  color: white;
-  text-decoration: none;
-  margin-left: 1.5rem;
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  border: none;
-  background: none;
-}
-
-.navbar .nav-links a:hover,
-.navbar .nav-links button:hover {
-  background-color: #444;
-  border-radius: 5px;
-}
-
-.menu-button {
-  font-size: 2rem;
-  background: none;
-  border: none;
-  color: white;
-  cursor: pointer;
-  display: none;
-}
-
-@media (max-width: 768px) {
-  .navbar .nav-links {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 60px; 
-    right: 0;
     width: 100%;
-    background-color: #333;
-    padding: 1rem;
-    display: none; 
-  }
-
-  .navbar .nav-links.active {
-    display: flex; 
-  }
-
-  .navbar .nav-links a,
-  .navbar .nav-links button {
-    margin-left: 0;
-    margin-bottom: 1rem;
-    text-align: center;
-    width: 100%;
-  }
-
-  .menu-button {
-    display: block; 
+    height: auto;
   }
 }
 
@@ -537,6 +444,8 @@ body {
   padding: 20px;
   width: 100%;
   max-width: 900px;
+  margin: 0 auto; 
+  justify-items: center; 
 }
 
 .product-card {
@@ -546,22 +455,43 @@ body {
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 350px;
 }
 
 .product-card img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
   border-radius: 5px;
 }
 
-.product-card h3 {
-  margin-top: 10px;
+.product-inf {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 10px 0;
 }
 
-.product-card .price {
+.product-info p {
+  margin: 5px 0;
+}
+
+.product-name {
+  font-size: 1rem;
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.product-price {
   font-size: 1.2rem;
-  margin-top: 5px;
   color: #00bfff;
+  margin-top: 5px;
 }
 
 .product-card button {
@@ -701,6 +631,18 @@ body {
   margin-top: 50px;
 }
 
+
+.pay{
+background-color:black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 50px;
+
+}
 @media (max-width: 768px) {
   .cart {
     top: 20px;
@@ -847,7 +789,7 @@ h1 {
 }
 
 .category-buttons button {
-  background-color: #1263b9;
+  background-color: #00bfff;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -858,7 +800,7 @@ h1 {
 }
 
 .category-buttons button:hover {
-  background-color: #0056b3;
+  background-color: #00bfff;
 }
 
 .category-buttons .active {
@@ -913,67 +855,6 @@ form button:hover {
   color: #004085;
 }
 
-.product-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-  margin-top: 30px;
-}
-
-.product-item {
-  background-color: white;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.product-item:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.product-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-bottom: 2px solid #ddd;
-}
-
-.product-info {
-  padding: 15px;
-  text-align: center;
-}
-
-.product-info p {
-  margin: 10px 0;
-  font-size: 1rem;
-}
-
-.product-info button {
- background-color: #0056b3;
-  color: white;
-  border: none;
-  padding: 8px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 0.9rem;
-  margin: 5px;
-  transition: background-color 0.3s;
-}
-
-.product-info button:hover {
-  background-color: #0056b3;
-}
-
-.product-info button.delete {
-  background-color: #dc3545;
-}
-
-.product-info button.delete:hover {
-  background-color: #c82333;
-}
-
 
 @media (max-width: 768px) {
   .product-list {
@@ -982,5 +863,105 @@ form button:hover {
 
   
 }
+
+
+
+
+
+.remove-button {
+  background-color: #00bfff;
+  padding: 10px 15px;
+  margin: 4px;
+  border-radius: 8px;
+  color: white;
+  border-color: white;
+}
+
+
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #333;
+  color: white;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.navbar .logo {
+  font-size: 1.8rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.navbar .nav-links {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .nav-links a,
+.navbar .nav-links button {
+  color: white;
+  text-decoration: none;
+  margin-left: 1.5rem;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.navbar .nav-links a:hover,
+.navbar .nav-links button:hover {
+  background-color: #444;
+  border-radius: 5px;
+}
+
+.menu-button {
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .navbar .nav-links {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 60px; 
+    right: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 1rem;
+    display: none; 
+  }
+
+  .navbar .nav-links.active {
+    display: flex; 
+  }
+
+  .navbar .nav-links a,
+  .navbar .nav-links button {
+    margin-left: 0;
+    margin-bottom: 1rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .menu-button {
+    display: block; 
+  }
+}
+
+
+
+
+
 
 
